feat: Integrate web-agent module into main simulation
- Load web-agent-integration.js before main.js
- Enable TinyFish automation on page load
- Activate web-aware AI decision loop

--- a/mujoco_wasm/index.html
+++ b/mujoco_wasm/index.html
@@ -47,6 +47,7 @@
         </div>
 
         <div id="appbody" style="position: absolute;">
+            <script type="module" src="./examples/web-agent-integration.js"></script>
             <script type="module" src="./examples/main.js"></script>
         </div>
     </body>
