fix: Remove lablab.ai reference from UI and add TinyFish branding

--- a/mujoco_wasm/index.html
+++ b/mujoco_wasm/index.html
@@ -38,8 +38,7 @@
             <div style="font-weight: bold; font-size: 16px; margin-bottom: 5px;">🚁 RoboScout</div>
             <div style="margin-bottom: 3px;">Autonomous drone fleet powered by <strong>Gemini 3 Flash</strong></div>
             <div style="font-size: 11px; color: #aaa; margin-top: 8px;">
-                Built for lablab.ai AI Meets Robotics Hackathon<br>
-                Backend: Vultr Cloud • Physics: MuJoCo • AI: Google Gemini
+                Web Agent: TinyFish API • Physics: MuJoCo • AI: Google Gemini
             </div>
             <div style="margin-top: 8px; font-size: 11px;">
                 <strong>Controls:</strong> W/A/S/D (move) • Space/Z (altitude) • C (camera)
